--- a/Classification Models.ipynb
+++ b/Classification Models.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "695b0846",
+   "id": "f657ff55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "efcdcc54",
+   "id": "6dcae56b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7abb4ddd",
+   "id": "4b6dc227",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "43fbd719",
+   "id": "80a5aa43",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b8334f1d",
+   "id": "b8ba0c9b",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ebd13033",
+   "id": "387fe1a9",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "978b5ab9",
+   "id": "fed7efc7",
    "metadata": {
     "scrolled": true
    },
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9697835a",
+   "id": "36500702",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b0a150ea",
+   "id": "894cc7cf",
    "metadata": {
     "scrolled": true
    },
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "21091cb8",
+   "id": "52d75f4e",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ad97c73e",
+   "id": "502b7150",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "581aadbb",
+   "id": "abf9d6a4",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "90787609",
+   "id": "00a7aae6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "156e7060",
+   "id": "a82b8d8c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -747,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "986398e5",
+   "id": "f096760f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "028394c5",
+   "id": "51512ab4",
    "metadata": {
     "scrolled": true
    },
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "dd9b55e3",
+   "id": "123f7b7c",
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "03e49226",
+   "id": "24f909fd",
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "44887711",
+   "id": "77f11d36",
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "8de1d604",
+   "id": "bd870b35",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "680beabe",
+   "id": "07b4185e",
    "metadata": {
     "scrolled": true
    },
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "a0e29458",
+   "id": "8aeb9134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "6d4b9aa7",
+   "id": "42247274",
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "419e15d3",
+   "id": "4725c67c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "7592d4d3",
+   "id": "c4d97483",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "a7d6faff",
+   "id": "4991f59b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "9b34617e",
+   "id": "c86ceeba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "ca4adf2e",
+   "id": "aa5fffb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34365a56",
+   "id": "750ff250",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "c0a40190",
+   "id": "2d088a07",
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "d7b6015b",
+   "id": "cd1f6e78",
    "metadata": {
     "scrolled": true
    },
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "096902c2",
+   "id": "af6dd1c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,8 +1305,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "id": "4a30f099",
+   "execution_count": 258,
+   "id": "a445165f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,46 +1315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "a49ed7a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def EDA(df, disc_cols, cont_cols, target):\n",
-    "    '''disc_cols = colunas que são discretas,\n",
-    "    cont_cols = colunas continuas'''\n",
-    "    import seaborn as sns\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    for col in df.columns:\n",
-    "        if col in disc_cols:\n",
-    "            fig, ax = plt.subplots(1, 2, figsize=(20, 6))\n",
-    "            fig.suptitle(f'Variável {col}', fontsize=20, fontweight='bold', y=1)\n",
-    "            sns.countplot(x=col, data=df, ax=ax[0], ec='black')\n",
-    "            ax[0].grid(axis='y')\n",
-    "            ax[0].set_title(f'Distribuição de {col}')\n",
-    "            ax[0].set_xticklabels(ax[0].get_xticks(), rotation = 90)\n",
-    "\n",
-    "            sns.barplot(x=col, y=target, data=df, ax=ax[1], ec='black', ci=None)\n",
-    "            ax[1].grid(axis='y')\n",
-    "            ax[1].set_title(f'{target} em função de {col}')\n",
-    "            plt.show()\n",
-    "\n",
-    "        elif col in cont_cols:\n",
-    "            fig, ax = plt.subplots(1, 2, figsize=(15, 6))\n",
-    "            fig.suptitle(f'Variável {col}', fontsize=20, fontweight='bold', y=1)\n",
-    "            sns.histplot(x=col, hue=target, data=df, ax=ax[0])\n",
-    "            ax[0].set_title(f'Distribuição de {col}')\n",
-    "\n",
-    "            sns.boxplot(x=target, y=col, data=df, ax=ax[1])\n",
-    "            ax[1].set_title(f'Boxplot de {col} em função de {target}')\n",
-    "            plt.show()\n",
-    "      "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 160,
-   "id": "7a6b468b",
+   "id": "d20e66b4",
    "metadata": {},
    "outputs": [
     {
@@ -1374,8 +1336,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "de7a7193",
+   "execution_count": 261,
+   "id": "3f29d3cd",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "9a6b5099",
+   "id": "b6532cc1",
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "bfbbcf25",
+   "id": "f307186d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "43608bdf",
+   "id": "fc60c917",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "6e48d192",
+   "id": "a8bfc654",
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +1992,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "05e2aca7",
+   "id": "67fccb9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2055,7 +2017,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "480a528a",
+   "id": "13eecc5b",
    "metadata": {},
    "outputs": [
     {
@@ -3193,18 +3155,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9a7b285",
+   "id": "0eb0ff0d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.heatmap(pd.crosstab([df.make, df.num_doors], [df.body_style, df.drive_wheels]),\n",
-    "            cmap=\"YlGnBu\", annot=True, cbar=False)"
+    "# sns.heatmap(pd.crosstab([df.make, df.num_doors], [df.body_style, df.drive_wheels]),\n",
+    "#             cmap=\"YlGnBu\", annot=True, cbar=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15623712",
+   "id": "111e01bf",
    "metadata": {},
    "outputs": [],
    "source": []
