Update TimeSeries - 01_Colecting_Cleaning_data.ipynb

--- a/TimeSeries/TimeSeries - 01_Colecting_Cleaning_data.ipynb
+++ b/TimeSeries/TimeSeries - 01_Colecting_Cleaning_data.ipynb
@@ -38,7 +38,10 @@
    "source": [
     "# ⌛Time Series Data⌛\n",
     "\n",
-    "time-period = frequency\n",
+    " A sequence of information which attaches a <strong>time-period</strong> to each value (anything  measuable and depends on time - ex: prices, humidity or number of people). \n",
+    " The time span isn't limited to a total time, it can be seconds, days, decades or century. It must have a starting and an ending.\n",
+    " \n",
+    " how often values od the data set are recorded = frequency\n",
     "  \n",
     "### Analyzing time-periods:\n",
     "\n",
